--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/imageEditorForm.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/imageEditorForm.css
@@ -1,29 +1,36 @@
-.label{
+div.label{
 	font-weight: bold;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipse;
 }
-.inputTextSmall{
+div.inputTextSmall{
 	width: 40px;
 }
-.inlineLabel{
+div.inlineLabel{
 	font-weight: bold;
 	margin-right: 10px;
 }
-.inlineLabel, .inputTextSmall{
-	display: inline-block;
+div.inlineLabel, div.inputTextSmall{
 	vertical-align: middle;
 }
-.floatCheckbox{
+@if user.agent ie6 {
+	div.inlineLabel, div.inputTextSmall, div.selectBox{
+		display: inline;
+	}
+} @else {
+	div.inlineLabel, div.inputTextSmall, div.selectBox{
+		display: inline-block;
+	}
+}
+div.floatCheckbox{
 	float: left;
 }
-.selectBox{
-	display: inline-block;
+div.selectBox{
 	width: 70px;
 	vertical-align: middle;
 }
-.selectBox *{
+div.selectBox *{
 	font-size: value("constants.css.fontSizeSmall");
 	line-height: 12px;
 }
